various modifications before tomorrows presentation
-added cytoscape logo to cytoscape related pages
-put app in production mode
-fixed dropdown menu text color

--- a/assets/typography.css
+++ b/assets/typography.css
@@ -3,3 +3,12 @@
 .Select-arrow {
     border-color: var(--bs-light-bg-subtle) transparent transparent;
 }
+
+.Select--multi .Select-value {
+    color: #ffffff;
+    border: 0px solid #ffffff;
+}
+
+.Select-clear {
+    color: #ffffff;
+}
